tests/errors/syntax_template_unclosed_interpolation.dang
let name = "Ada"
let bad = `hello ${name`
